--- a/src/main/resources/templates/recordcreation.html
+++ b/src/main/resources/templates/recordcreation.html
@@ -12,16 +12,20 @@
 	</div>
 	
 	<div class="RecordCreationSelector">
-		<h2>Chose Record Type</h2>
 		
-		<form> 
-			<input type="radio" id="patient" name="record" value="patient">
-			<label for="PatientButton">Patient</label>
-			<input type="radio" id="disease" name="record" value="disease">
-			<label for="disease">Disease</label>
-			<input type="radio" id="medicine" name="record" value="medicine">
-			<label for="medicine">Medicine</label>
-		</form>
+		<fieldset>
+			<legend style="color: crimson; font-size:1.5em; font-weight: bold; margin: 0px 10px 0px 0px;">Choose Record Type</legend>
+		
+			<form> 
+				<input type="radio" id="patient" name="record" value="patient">
+				<label for="PatientButton">Patient</label>
+				<input type="radio" id="disease" name="record" value="disease">
+				<label for="disease">Disease</label>
+				<input type="radio" id="medicine" name="record" value="medicine">
+				<label for="medicine">Medicine</label><br/><br/>
+				<input type="submit" name="SubmitType" value="Submit"></input>
+			</form>
+		</fieldset>
 	</div>
 </body> 
 </html>
