Updated .html pages

--- a/src/main/resources/static/css/recordviewer.css
+++ b/src/main/resources/static/css/recordviewer.css
@@ -1,5 +1,5 @@
-.PatientRecordsHeader {
-	font-family: "Lucia Console"; 
+.RecordsHeader {
+	font-family: "Lucia Console";
 	font-size: 1.0em;
 	text-align: center;
 	min-width: 40px;
