--- a/src/main/resources/templates/diseaserecords.html
+++ b/src/main/resources/templates/diseaserecords.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="ISO-8859-1">
 	<title>Healthchain Disease Records Page</title>
-	<!-- <link th:href = "@{/css/patientrecords.css}"> --> 
+	<!-- <link th:href = "@{/css/recordviewer.css}"> --> 
 </head>
 
 <body>
