--- a/src/main/resources/templates/patientrecords.html
+++ b/src/main/resources/templates/patientrecords.html
@@ -3,12 +3,16 @@
 <head>
 	<meta charset="ISO-8859-1">
 	<title>Healthchain Patient Records Page</title>
-	<link th:href = "@{/css/patientrecords.css}">
+	<link th:href = "@{/css/recordviewer.css}">
 </head>
 
 <body>
-	<div class="PatientRecordsHeader">
+	<div class="RecordsHeader">
 		<h1>Patient Records</h1>
-	</div> 
+
+		<table>
+				
+		</table>
+	</div>
 </body>
 </html>
