--- a/src/main/resources/templates/patientrecordcreator.html
+++ b/src/main/resources/templates/patientrecordcreator.html
@@ -15,7 +15,7 @@
   <div class="RecordCreator">
       <div class="PatientPersonalDetails">
 		<fieldset>
-          <legend style="color: crimson; font-size:1.5em; font-weight: bold; text-align: center; margin: 0px 10px 0px 0px;">Patient Personal Details</legend>
+          <legend style="color: crimson; font-size:1.5em; font-weight: bold; text-align: center; margin: 0px 10px 0px 0px;">Patient Information</legend>
 
           <form action="#" th:action="@{/patientrecordform}" th:object="${record}" method="post">
             <label for="patientFirstName">First Name</label>
@@ -24,6 +24,9 @@
             <input type="text" th:field="*{textField}" id="patientMiddleInitial" /><br/>
             <label for="patientLastName">Last Name</label>
             <input type="text" th:field="*{textField}" id="patientLastName" />
+          </form>
+
+          <form action="#" >
           </form>
 		</fieldset>
       </div>
