Added more stuff to Patient Record Creation Page

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -3,8 +3,8 @@ body {
 }
 
 .IndexHeader {
-	font-family: "Lucida Console";
-  color: #f44336; 
+	font-family: "LuciaConsole";
+  color: #f44336;
 }
 
 .ThreeButtonsSection button {
