--- a/src/main/resources/static/css/recordcreator.css
+++ b/src/main/resources/static/css/recordcreator.css
@@ -22,6 +22,10 @@
 	margin: 30px 0px;
 }
 
+.PatientPersonalDetails {
+	min-width: 100px; 
+}
+
 .PatientDemographics input[type=text] {
 	font-family: "Lucia Console";
 }
