--- a/src/main/resources/templates/patientrecordcreator.html
+++ b/src/main/resources/templates/patientrecordcreator.html
@@ -63,9 +63,11 @@
             <input type="text" th:field="*{cityAndCountry}" id="patientCityAndCountry" /><br/><br/>
            </fieldset>
       </div>
-
-      <button type="button" name="action" value="Cancel">Cancel</button>
-      <input type="submit" value="Submit"/>
+      
+      <div class="SubmitOrCancel">
+        <button type="button" name="action" value="Cancel">Cancel</button>
+        <input type="submit" value="Submit"/>
+      </div>
     </form>
   </div>
 </body>
