--- a/src/main/resources/templates/diseaserecordcreator.html
+++ b/src/main/resources/templates/diseaserecordcreator.html
@@ -13,35 +13,34 @@
 
   <div class="RecordCreator">
 
-	<div class="LocationDetails">
-		<fieldset>
-          <legend style="color: crimson; font-size:1.5em; font-weight: bold; text-align: center; margin: 0px 10px 0px 0px;">Location Details</legend>
+        <form action="#" th:action="@{/diseaserecordform}" th:object="${diseaseInfo}" method="post">
+          <div class="LocationDetails">
+              <fieldset>
+                <legend style="color: crimson; font-size:1.5em; font-weight: bold; text-align: center; margin: 0px 10px 0px 0px;">Case Location</legend>
 
-          <form action="#" th:action="@{/diseaserecordform}" th:object="${report}" method="post">
-            <label for="hospitalOrLabName">Hospital/Lab Name</label>
-            <input type="text" th:field="*{textField}" id="hospitalOrLabName" /><br/>
-            <label for="cityTownOrVillageName">City/Town/Village</label>
-            <input type="text" th:field="*{textField}" id="cityTownOrVillagename" /><br/>
-            <label for="countryName">Country</label>
-            <input type="text" th:field="*{textField}" id="countryName" />
-          </form>
-		</fieldset>
-	</div>
+                <label for="cityTownOrVillageName">City/Town/Village</label>
+                <input type="text" th:field="*{textField}" id="cityTownOrVillagename" /><br/>
+                <label for="countryName">Country</label>
+                <input type="text" th:field="*{textField}" id="countryName" />
+              </fieldset>
+          </div>
 
-      <div class="DiseaseDetails">
-		<fieldset>
-          <legend style="color: crimson; font-size:1.5em; font-weight: bold; text-align: center; margin: 0px 10px 0px 0px;">Disease Details</legend>
+          <div class="DiseaseDetails">
+            <fieldset>
+              <legend style="color: crimson; font-size:1.5em; font-weight: bold; text-align: center; margin: 0px 10px 0px 0px;">Disease Involved</legend>
 
-          <form action="#" th:action="@{/patientrecordform}" th:object="${command}">
-            <label for="patientFirstName">First Name</label>
-            <input type="text" th:field="*{textField}" id="patientFirstName" /><br/>
-            <label for="patientMiddleInitial">Middle Initial</label>
-            <input type="text" th:field="*{textField}" id="patientMiddleInitial" /><br/>
-            <label for="patientLastName">Last Name</label>
-            <input type="text" th:field="*{textField}" id="patientLastName" />
-          </form>
-		</fieldset>
-	</div> 
+                <label for="diseaseName">Disease Name:</label>
+                <input type="text" th:field="*{textField}" id="diseaseName" /><br/>
+                <label for="virusName">Virus:</label>
+                <input type="text" th:field="*{textField}" id="virus"/>
+            </fieldset>
+          </div>
+
+          <div class="SubmitOrCancel">
+            <button type="button" name="action" value="Cancel">Cancel</button>
+            <input type="submit" value="Submit"/>
+          </div>
+        </form>
   </div>
 </body>
 </html>
