--- a/src/main/resources/static/css/recordcreator.css
+++ b/src/main/resources/static/css/recordcreator.css
@@ -46,6 +46,28 @@ body {
 	font-family: "Lucia Console";
 }
 
-input[type=submit] {
-	float: right;
+form {
+	margin: 10px 0px;
+}
+
+label {
+	display: inline-block;
+	padding: 3px 6px;
+	text-align: right;
+	width: 150px;
+}
+
+textarea {
+	width: 100%;
+	height: 500px;
+	min-width: 500px;
+	min-height: 300px;
+}
+
+.Submit {
+	margin: 10px 0px 0px 0px;
+}
+
+button {
+	padding: 15px 32px;
 }
