--- a/src/main/resources/static/css/recordviewer.css
+++ b/src/main/resources/static/css/recordviewer.css
@@ -4,5 +4,9 @@
 	text-align: center;
 	min-width: 40px;
 	display: flex;
-	color: crimson; 
+	color: crimson;
+}
+
+.RecordsTable {
+	align-items: center;
 }
