--- a/src/main/resources/templates/hospitalrecordcreator.html
+++ b/src/main/resources/templates/hospitalrecordcreator.html
@@ -8,20 +8,20 @@
 
 <body>
   <div class="RecordCreationHeader">
- 		<h1>Disease Record Creator</h1>
+ 		<h1>Hospital Record Creator</h1>
   </div>
 
   <div class="RecordCreator">
 
-        <form action="#" th:action="@{/diseaseRecordSubmitted}" th:object="${DiseaseInfo}" method="post">
+        <form action="#" th:action="@{/hospitalRecordSubmitted}" th:object="${hospitalInfo}" method="post">
           <div class="DiseaseDetails">
               <fieldset>
-                <legend style="color: crimson; font-size:1.5em; font-weight: bold; text-align: center; margin: 0px 10px 0px 0px;">Disease Details</legend>
+                <legend style="color: crimson; font-size:1.5em; font-weight: bold; text-align: center; margin: 0px 10px 0px 0px;">Hospital Details</legend>
 
-                <label for="diseaseName">Name:</label>
-                <input type="text" th:field="*{DiseaseName}" id="diseaseName" th:name="diseaseName"/><br/><br/>
-                <label for="countryName">Symptoms:</label><br/>
-                <textarea name="diseaseSymptoms" th:field="*{DiseaseSymptoms}" id="diseaseSymptoms" th:name="diseaseSymptoms"/></textarea>
+                <label for="hospitalName">Name:</label>
+                <input type="text" th:field="*{HospitalName}" id="hospitalName" th:name="hospitalName"/><br/><br/>
+                <label for="hospitalLocation">Location:</label>
+                <input type="text" th:field="*{HospitalLocation}" id="hospitalLocation" th:name="hospitalLocation"/><br/><br/>
               </fieldset>
           </div>
 
@@ -29,11 +29,10 @@
             <input type="submit" value="Submit"/>
           </div>
         </form>
-        <br/>
+
         <form th:action="@{/recordCancelled}" method="get">
             <button type="submit" th:onlick="@{'/recordcancelled'}" name="cancel" value="Cancel">Cancel</button>
         </form>
-
   </div>
 </body>
 </html>
