--- a/src/main/resources/templates/patientrecordcreator.html
+++ b/src/main/resources/templates/patientrecordcreator.html
@@ -13,61 +13,29 @@
 	</div>
 
   <div class="RecordCreator">
-    <form action="#" th:action="@{/patientrecordform}" th:object="${record}" method="post">
+    <form action="#" th:action="@{/patientRecordSubmitted}" th:object="${PatientInfo}" method="post">
       <div class="PatientPersonalDetails">
 		      <fieldset>
           <legend style="color: crimson; font-size:1.5em; font-weight: bold; text-align: center; margin: 0px 10px 0px 0px;">Patient Information</legend>
 
-            <label for="patientFirstName">First Name:</label>
-            <input type="text" th:field="*{firstName}" id="patientFirstName" />
-            <label for="patientMiddleInitial">Middle Initial:</label>
-            <input type="text" th:field="*{middleInitial}" id="patientMiddleInitial" />
-            <label for="patientLastName">Last Name:</label>
-            <input type="text" th:field="*{lastName}" id="patientLastName" /><br/><br/>
-
-            <label for="patientPhoneNumber">Phone Number:</label>
-            <input type="text" th:field="*{phoneNumber}" id="patientPhoneNumber" />
-            <label for="patientEmail">Email:</label>
-            <input type="text" th:field="*{email}" id="patientEmail" />
-            <br/>
-            <label for="patientGender">Gender:</label>
-            <input type="radio" th:field="*{isMale}" id="patientGenderMale">
-            <label for="patientIsMale">M</label>
-            <input type="radio" th:field="*{isFemale}" id="patientGenderFemale">
-            <label for="patientIsFemale">F</label>
+            <label for="patientName">Name:</label>
+            <input type="text" th:field="*{PatientName}" id="patientName" th:name="patientName"/><br/><br/>
+            <label for="patientAge">Age:</label>
+            <input type="text" th:field="*{PatientAge}" id="patientAge" th:name="patientAge"/><br/><br/>
+            <label for="patientInfo">Information:</label><br/>
+            <input type="text" th:field="*{insuranceID}" id="insuranceId" th:name="insuranceId"/><br/><br/>
+            <label for="patientInfo">Information:</label><br/>
+            <textarea name="patientInfo" th:field="*{PatientInfo}" id="patientInfo" th:name="patientInfo"></textarea>
 		       </fieldset>
       </div>
 
-      <div class="PatientDemographics">
-          <fieldset>
-          <legend style="color: crimson; font-size:1.5em; font-weight: bold; text-align: center; margin: 0px 10px 0px 0px;">Patient Demographics</legend>
-
-            <label for="patientAddressLine1">Address Line 1:</label>
-            <input type="text" th:field="*{addressLine1}" id="patientAddressLine1" /><br/>
-            <label for="patientAddressLine2">Address Line 2:</label>
-            <input type="text" th:field="*{addressLine2}" id="patientAddressLine2" />
-            <label for="patientCityAndCountry">City, (State), County:</label>
-            <input type="text" th:field="*{cityAndCountry}" id="patientCityAndCountry" /><br/><br/>
-           </fieldset>
-      </div>
-
-      <div class="PatientReportAuthor">
-          <fieldset>
-          <legend style="color: crimson; font-size:1.5em; font-weight: bold; text-align: center; margin: 0px 10px 0px 0px;">Doctor Information</legend>
-
-            <label for="patientAddressLine1">First Name:</label>
-            <input type="text" th:field="*{addressLine1}" id="patientAddressLine1" /><br/>
-            <label for="patientAddressLine2">Middle Initial:</label>
-            <input type="text" th:field="*{addressLine2}" id="patientAddressLine2" />
-            <label for="patientCityAndCountry">City, (State), County:</label>
-            <input type="text" th:field="*{cityAndCountry}" id="patientCityAndCountry" /><br/><br/>
-           </fieldset>
-      </div>
-      
-      <div class="SubmitOrCancel">
-        <button type="button" name="action" value="Cancel">Cancel</button>
+      <div class="Submit">
         <input type="submit" value="Submit"/>
       </div>
+    </form>
+    <br/>
+    <form th:action="@{/recordCancelled}" method="get">
+        <button type="submit" th:onlick="@{'/recordcancelled'}" name="cancel" value="Cancel">Cancel</button>
     </form>
   </div>
 </body>
