Updated html files

--- a/src/main/resources/templates/patientrecordcreator.html
+++ b/src/main/resources/templates/patientrecordcreator.html
@@ -22,7 +22,7 @@
             <input type="text" th:field="*{PatientName}" id="patientName" th:name="patientName"/><br/><br/>
             <label for="patientAge">Age:</label>
             <input type="text" th:field="*{PatientAge}" id="patientAge" th:name="patientAge"/><br/><br/>
-            <label for="patientInfo">Information:</label><br/>
+            <label for="patientInfo">Insurance ID:</label><br/>
             <input type="text" th:field="*{insuranceID}" id="insuranceId" th:name="insuranceId"/><br/><br/>
             <label for="patientInfo">Information:</label><br/>
             <textarea name="patientInfo" th:field="*{PatientInfo}" id="patientInfo" th:name="patientInfo"></textarea>
