Updated lots of files

--- a/src/main/resources/templates/diseaserecordcreator.html
+++ b/src/main/resources/templates/diseaserecordcreator.html
@@ -13,7 +13,7 @@
 
   <div class="RecordCreator">
 
-        <form action="#" th:action="@{/diseaseRecordSubmitted}" th:object="${DiseaseInfo}" method="post">
+        <form action="#" th:action="@{/diseases/recordSubmitted}" th:object="${DiseaseInfo}" method="post">
           <div class="DiseaseDetails">
               <fieldset>
                 <legend style="color: crimson; font-size:1.5em; font-weight: bold; text-align: center; margin: 0px 10px 0px 0px;">Disease Details</legend>
