--- a/src/main/resources/templates/patientrecordcreator.html
+++ b/src/main/resources/templates/patientrecordcreator.html
@@ -13,7 +13,7 @@
 	</div>
 
   <div class="RecordCreator">
-    <form action="#" th:action="@{/patientRecordSubmitted}" th:object="${PatientInfo}" method="post">
+    <form action="#" th:action="@{/patients/recordSubmitted}" th:object="${PatientInfo}" method="post">
       <div class="PatientPersonalDetails">
 		      <fieldset>
           <legend style="color: crimson; font-size:1.5em; font-weight: bold; text-align: center; margin: 0px 10px 0px 0px;">Patient Information</legend>
