--- a/src/main/resources/templates/patientrecords.html
+++ b/src/main/resources/templates/patientrecords.html
@@ -24,7 +24,7 @@
 			</thead>
 			<tbody>
 				<tr th:each="patient : ${}">
-					<td th:text="">Name</td>
+					<td th:text=""></td>
 				</tr>
 		  </tbody>
 		</table>
