Moved all .html files to templates folder
Because they use Thymeleaf and are therefore designated a Thymeleaf namespace.

--- a/src/main/resources/templates/patientspage.html
+++ b/src/main/resources/templates/patientspage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html xmls:th="http://www.thymeleaf.org">
 <head>
 	<title>Healthchain Patients Main Page</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
