--- a/src/main/resources/templates/hospitalpage.html
+++ b/src/main/resources/templates/hospitalpage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html xmls:th="http://www.thymeleaf.org">
 <head>
 	<title>Healthchain Hospitals Main Page</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
