--- a/src/main/resources/templates/recordcreated.html
+++ b/src/main/resources/templates/recordcreated.html
@@ -1,18 +1,17 @@
 <!DOCTYPE HTML>
-<html>
+<html xmls:th="http://www.thymeleaf.org">
 <head>
-	<title>Healthchain Diseases Main Page</title>
+	<title>Healthchain Record Created Page</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link th:href="@{/css/index.css}"/>
 </head>
 <body>
 	<div class="PageHeader">
-		<h1>DISEASES</h1>
+		<h1>Record is created and put on the blockchain!</h1>
 	</div>
 
 	<div class="ButtonsSection">
-		<button type="button" th:onclick="goToExistingDiseasesPage()">Existing</button>
-		<button type="button" th:onclick="goToDiseasesCreatorPage()">New</button>
+		<button type="button" th:onclick="returnToIndex()">OK</button>
 	</div>
 </body>
 </html>
