--- a/src/main/resources/templates/diseaserecords.html
+++ b/src/main/resources/templates/diseaserecords.html
@@ -22,8 +22,11 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="disease : ${}">
-					<td th:text=""></td>
+				<tr>
+					<td>SARS</td>
+					<td>Fever, chills, dry cough, shortness of breath</td>
+					<td>45274384</td>
+					<td>3/15/2021</td>
 				</tr>
 			</tbody>
 		</table>
