--- a/src/main/resources/templates/hospitalrecords.html
+++ b/src/main/resources/templates/hospitalrecords.html
@@ -17,13 +17,16 @@
 				<tr>
 					<th>Name</th>
 					<th>Location</th>
-					<th></th>
-					<th></th>
+					<th>Employee ID</th>
+					<th>Date Admitted</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="hospital : ${}">
-					<td th:text="">Name</td>
+				<tr>
+					<td>Kaiser Permanente Hospital</td>
+					<td>Milpitas</td>
+					<td>57483765</td>
+					<td>3/15/2021</td>
 				</tr>
 			</tbody>
 		</table>
