--- a/src/main/resources/templates/patientrecords.html
+++ b/src/main/resources/templates/patientrecords.html
@@ -23,8 +23,12 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="patient : ${}">
-					<td th:text=""></td>
+				<tr >
+					<td>54783245</td>
+					<td>Joaquin Crowe</td>
+					<td>Coughs, shortness of breath</td>
+					<td>42</td>
+					<td>3/15/2021</td>
 				</tr>
 		  </tbody>
 		</table>
