--- a/src/main/resources/templates/hospitalpage.html
+++ b/src/main/resources/templates/hospitalpage.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 	<div class="PageHeader">
-		<h1>MEDICINES</h1>
+		<h1>HOSPITALS</h1>
 	</div>
 
 	<div class="ButtonsSection">
-		<button type="button" th:onclick="goToExistingHospitalsPage()">Existing</button>
-		<button type="button" th:onclick="goToHospitalCreatorPage()">New</button>
+		<button type="button" th:onclick="|window.location.href='/hospitals/existing'|">Existing</button>
+		<button type="button" th:onclick="|window.location.href='/hospitals/create'|">New</button>
 	</div>
 </body>
 </html>
