--- a/src/main/resources/templates/hospitalrecordcreator.html
+++ b/src/main/resources/templates/hospitalrecordcreator.html
@@ -13,7 +13,7 @@
 
   <div class="RecordCreator">
 
-        <form action="#" th:action="@{/hospitals/recordSubmitted}" th:object="${hospitalInfo}" method="post">
+        <form action="#" th:action="|window.location.href='/hospitals/recordSubmitted'|'" th:object="${hospitalInfo}" method="post">
           <div class="DiseaseDetails">
               <fieldset>
                 <legend style="color: crimson; font-size:1.5em; font-weight: bold; text-align: center; margin: 0px 10px 0px 0px;">Hospital Details</legend>
@@ -30,8 +30,8 @@
           </div>
         </form>
 
-        <form th:action="@{/recordCancelled}" method="get">
-            <button type="submit" th:onlick="@{'/recordcancelled'}" name="cancel" value="Cancel">Cancel</button>
+        <form th:action="|window.location.href='/hospitals/recordCancelled'|" method="get">
+            <button type="submit" name="cancel" value="Cancel">Cancel</button>
         </form>
   </div>
 </body>
